Worked on dark mode bugs

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -56,21 +56,22 @@
 }
 
 
-.dark-mode .navbar {
+.dark-mode.navbar {
   background-color: white;
   box-shadow: 0 2px 10px 2px  rgba(0, 0, 0, 0.4);
-  height: 50px;
+  height: 80px;
 }
 
-.dark-mode .app-name {
+.dark-mode.app-name {
   color: black;
   font-weight: 900;
   padding: 5px;
 }
 
-.dark-mode .nav-link {
+.dark-mode.nav-link {
   color: black;
   font-weight: 300;
+
 }
 
 
