--- a/app/assets/stylesheets/pages/_play.scss
+++ b/app/assets/stylesheets/pages/_play.scss
@@ -302,7 +302,7 @@
   font-size: x-large;
   cursor: pointer;
   border: 1px solid black;
-  background-color: #1098e1;
+  background-color: #9163e9;
   border-radius: 4px;
   &.disabled {
     cursor: not-allowed;
